--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
@@ -1,7 +1,7 @@
 <div style="width: 857px">
     <div class="flex valign-center tab-row">
         <!--B1_1 賃金テーブルコード/名称 -->
-        <div id="B1_1"  style="width: 110px;"
+        <div id="B1_1" style="width: 110px;"
              data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_8')}</div>
         <!--B1_2 賃金テーブルコード -->
         <!--B1_3 賃金テーブル名称-->
@@ -37,7 +37,7 @@
 	                    <th class="ui-widget-header">#{i18n.getText('QMM016_22')}</th>
 	                    <th class="ui-widget-header">
 	                        <div style="display: inline-block">#{i18n.getText('QMM016_27')}</div>
-	                        <button style="display: inline-block"
+	                        <button tabindex="-1" style="display: inline-block"
 	                                data-bind="ntsHelpButton: {image: '../resource/＃QMM017_1.png', position: 'bottom left'}">?</button>
 	                    </th>
 	                    <th class="ui-widget-header">#{i18n.getText('QMM016_28')}</th>
@@ -51,33 +51,27 @@
 	                    </td>
 	                    <td style="text-align: center;" data-bind="if: masterNumericClassification() == 1">
 	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
-                                <div tabindex="1">
-                                    <input id="B2_8"  data-bind="ntsNumberEditor: {
-	                            		required: true,
-	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
-	                            		constraint: 'RangeLowerLimit',
-	                            		value: rangeLowerLimit,
-	                            		name: '#[QMM016_30]',
+	                            <input id="B2_8" tabindex="12" data-bind="ntsNumberEditor: { 
+	                            		required: true, 
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
+	                            		constraint: 'RangeLowerLimit', 
+	                            		value: rangeLowerLimit, 
+	                            		name: '#[QMM016_30]', 
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-                                </div>
-
 	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-	                            <div tabindex="2">
-                                    <input id="B2_10"  data-bind="ntsNumberEditor: {
-	                            		required: true,
-	                            		enable: $vm.updateMode() &amp;&amp;
-	                            		$vm.isSelectedHistory(),
-	                            		constraint: 'RangeUpperLimit',
-	                            		value: rangeUpperLimit,
+	                            <input id="B2_10" tabindex="13" data-bind="ntsNumberEditor: { 
+	                            		required: true, 
+	                            		enable: $vm.updateMode() &amp;&amp; 
+	                            		$vm.isSelectedHistory(), 
+	                            		constraint: 'RangeUpperLimit', 
+	                            		value: rangeUpperLimit, 
 	                            		name: '#[QMM016_32]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-                                </div>
-
 	                        </div>
 	                    </td>
 	                    <td style="text-align: center;" data-bind="if: masterNumericClassification() == 1">
-	                        <div tabindex="3" data-bind="with: $vm.elementRangeSetting().firstElementRange">
-	                            <input id="B2_11"  data-bind="ntsNumberEditor: {
+	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
+	                            <input id="B2_11" tabindex="14" data-bind="ntsNumberEditor: { 
 	                            		required: true, 
 	                            		enable: $vm.updateMode() &amp;&amp; 
 	                            		$vm.isSelectedHistory(), 
@@ -92,15 +86,13 @@
             </table>
         </div>
     </div>
-    <div class="tab-row" tabindex="4" style="margin-left: 75px; width: 500px; text-align: center;">
-        <button data-bind="click: $vm.createOneDimensionWageTable" style="width: 400px;"
+    <div class="tab-row" style="margin-left: 75px; width: 500px; text-align: center;">
+        <button tabindex="15" data-bind="click: $vm.createOneDimensionWageTable" style="width: 400px;"
                 class="caret-bottom large-caret large">#{i18n.getText('QMM016_35')}</button>
     </div>
-    <div  class="tab-row" style="margin-top: 40px;">
+    <div class="tab-row" style="margin-top: 40px;">
         <div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_36')}</div>
-        <div tabindex="5">
-            <button style="margin-left: 30px;" id="B4_2">#{i18n.getText('QMM016_37')}</button>
-        </div>
+        <button tabindex="16" style="margin-left: 30px;" id="B4_2">#{i18n.getText('QMM016_37')}</button>
     </div>
     <hr></hr>
     <div class="tab-row" style="margin-top: 20px;" data-bind="if: $vm.wageTableContent().payment().length >0">
