--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
@@ -108,34 +108,25 @@
                             <div id="A5_1" class="column-1"
                                  data-bind="ntsFormLabel: {required: true, constraint: ['WageTableCode', 'WageTableName']}">#{i18n.getText('QMM016_8')}</div>
                             <!--A5_2 コード-->
-                            <div  tabindex="12">
-                                <input id="A5_2"
-                                       data-bind="ntsTextEditor: {constraint: 'WageTableCode', value: wageTableCode, name: '#[QMM016_14]', required: true , enable: $vm.updateMode() == false}"/>
-
-                            </div>
-                            <div tabindex="13">
-                                <!--A5_3 名称-->
-                                <input style="margin-left: 15px;" id="A5_3"  width="230px"
-                                       data-bind="ntsTextEditor: {constraint: 'WageTableName',value: wageTableName, name: '#[QMM016_15]', required: true}"/>
-
-                            </div>
-                         </div>
+                            <input id="A5_2" tabindex="12"
+                                   data-bind="ntsTextEditor: {constraint: 'WageTableCode', value: wageTableCode, name: '#[QMM016_14]', required: true , enable: $vm.updateMode() == false}"/>
+                            <!--A5_3 名称-->
+                            <input style="margin-left: 15px;" id="A5_3" tabindex="13" width="230px"
+                                   data-bind="ntsTextEditor: {constraint: 'WageTableName',value: wageTableName, name: '#[QMM016_15]', required: true}"/>
+                        </div>
                         <div class="flex valign-center tab-row" data-bind="with: $vm.selectedHistory">
                             <!--A6_1 開始年月-->
                             <div id="A6_1" class="column-1"
                                  data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_16')}</div>
                             <!--A6_2 開始年月（西暦）-->
-                            <div tabindex="14">
-                                <div id="A6_2"
-                                     data-bind="ntsDatePicker: {
+                            <div id="A6_2" tabindex="14"
+                                 data-bind="ntsDatePicker: {
                                     name: '#[QMM016_16]',
                                     value: startMonth,
                                     dateFormat: 'yearmonth',
                                     valueFormat: 'YYYYMM',
                                     required: true,
                                     enable: !$vm.updateMode()}"/>
-                            </div>
-
                             <!--A6_3 開始年月（和暦）-->
                             <div style="margin-left: 10px;" id="A6_3"
                                  data-bind="text: displayJapanStartYearMonth"/>
@@ -150,8 +141,8 @@
                                 <!--A7_3 罫線-->
                                 <hr></hr>
                                 <!--A7_4 利用次元区分-->
-                                <div tabindex="15" class="flex valign-center tab-row">
-                                    <div id="A7_4_1" class="cf"  data-bind="ntsSwitchButton: {
+                                <div class="flex valign-center tab-row">
+                                    <div id="A7_4_1" class="cf" tabindex="15" data-bind="ntsSwitchButton: {
                                         name: '#[QMM016_19]',
                                         options: elementSettingItem1,
                                         optionsValue: 'value',
@@ -168,7 +159,7 @@
                                 <hr></hr>
                                 <!--A7_4 利用次元区分-->
                                 <div class="flex valign-center tab-row">
-                                    <div id="A7_4_2" class="cf" tabindex="14" data-bind="ntsSwitchButton: {
+                                    <div id="A7_4_2" class="cf" tabindex="15" data-bind="ntsSwitchButton: {
                                         name: '#[QMM016_19]',
                                         options: elementSettingItem2,
                                         optionsValue: 'value',
@@ -210,8 +201,8 @@
 	                                        <th class="ui-widget-header" style="text-align: center;">#{i18n.getText('QMM016_29')}</th>
 	                                        <td data-bind="if: elementSetting() == 0 || elementSetting() == 1 || elementSetting() == 2">
 	                                            <!--A8_5 参照ボタン1-->
-	                                            <div tabindex="16">
-	                                                <button  class="small" id="A8_5"
+	                                            <div>
+	                                                <button tabindex="16" class="small" id="A8_5"
 	                                                        data-bind="click: function(){$vm.selectElement(1)}, enable: !$vm.updateMode()">#{i18n.getText('QMM016_23')}</button>
 	                                            </div>
 	                                            <!--A8_6 選択要素1-->
@@ -226,8 +217,8 @@
 	                                            class="ui-widget-header">#{i18n.getText('QMM016_40')}</th>
 	                                        <td data-bind="if: elementSetting() == 1 || elementSetting() == 2">
 	                                            <!--A8_8 参照ボタン2-->
-	                                            <div tabindex="17">
-	                                                <button  class="small" id="A8_8"
+	                                            <div>
+	                                                <button tabindex="17" class="small" id="A8_8"
 	                                                        data-bind="click: function(){$vm.selectElement(2)}, enable: !$vm.updateMode()">#{i18n.getText('QMM016_23')}</button>
 	                                            </div>
 	                                            <!--A8_9 選択要素2-->
@@ -242,12 +233,9 @@
 	                                            class="ui-widget-header">#{i18n.getText('QMM016_44')}</th>
 	                                        <td data-bind="if: elementSetting() == 2">
 	                                            <!--A8_11 参照ボタン3-->
-                                                <div tabindex="18">
-                                                    <button  class="small" id="A8_11"
-                                                             data-bind="click: function(){$vm.selectElement(3)}, enable: !$vm.updateMode()">#{i18n.getText('QMM016_23')}</button>
-
-                                                </div>
-	                                             <!--A8_12 選択要素3-->
+	                                            <button tabindex="18" class="small" id="A8_11"
+	                                                    data-bind="click: function(){$vm.selectElement(3)}, enable: !$vm.updateMode()">#{i18n.getText('QMM016_23')}</button>
+	                                            <!--A8_12 選択要素3-->
 	                                            <div data-bind="with: elementInformation().threeDimensionElement">
 	                                                <div data-bind="text: elementName"></div>
 	                                            </div>
