--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/i/index.xhtml
@@ -28,25 +28,23 @@
             <div style="margin-top: 20px; min-width: 550px">
                 <div style="width: 130px;"
                      data-bind="ntsFormLabel: {required: true}" id="C2_1">#{i18n.getText('QMM016_75')}</div>
-                <div tabindex="1">
-                    <div id ="I3_2"
-                         data-bind="ntsDatePicker: {
+                <div id ="I3_2"
+                     data-bind="ntsDatePicker: {
 							name: '#[QMM016_16]',
 							value: startMonth,
 							dateFormat: 'yearmonth',
 							valueFormat: 'YYYYMM',
 							required: true,
 							enable: true}"
-                         tabindex="1" />
-                </div>
+                     tabindex="1" />
                 <div
                         style="width: 100px; margin-left: 10px; display: inline-block;">#{i18n.getText('QMM016_76')}</div>
             </div>
             <div class="valign-top control-group" style="margin-top: 20px; min-width: 550px">
                 <div style="width: 130px;"
                      data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM016_77')}</div>
-                <div tabindex = "2" style = "width: 280px; padding-top: 9px; display: inline-block">
-                    <div id = "I4_2"
+                <div style = "width: 280px; padding-top: 9px; display: inline-block">
+                    <div id = "I4_2" tabindex = "2"
                          data-bind="ntsRadioBoxGroup: {
 										value: takeoverMethod,
 										enable: true,
@@ -59,14 +57,9 @@
 
         </div>
         <div id="functions-area-bottom">
-            <div tabindex="5">
-                <button class="x-large proceed "
-                        data-bind="click: addNewHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM016_54')}</button>
-
-            </div>
-            <div tabindex="6">
-                <button class="large" data-bind="click: cancel">#{i18n.getText('QMM016_55')}</button>
-            </div>
+            <button tabindex ="3" class="x-large proceed "
+                    data-bind="click: addNewHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM016_54')}</button>
+            <button tabindex ="4" class="large" data-bind="click: cancel">#{i18n.getText('QMM016_55')}</button>
         </div>
     </ui:define>
 </ui:composition>
