--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/index.xhtml
@@ -29,8 +29,8 @@
 			<div style="margin-top: 20px; min-width: 550px">
 				<div style="width: 130px;"
 					 data-bind="ntsFormLabel: {required: true}" >#{i18n.getText('QMM016_79')}</div>
-				<div tabindex="1" style="width: 437px; display: inline-flex; position: absolute; left: 145px; top: 140px">
-					<div id="J3_2"  style="width: 437px"
+				<div style="width: 437px; display: inline-flex; position: absolute; left: 145px; top: 140px">
+					<div id="J3_2" tabindex="1" style="width: 437px"
 						 data-bind="ntsRadioBoxGroup: {
 										value: modifyMethod,
 										enable: isLastHistory,
@@ -43,31 +43,24 @@
 				<div style="margin-top: 100px; margin-left: 150px;  min-width: 420px">
 					<div style="width: 100px; display: inline-block"
 						 data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_75')}</div>
-					<div tabindex="2">
-						<div id="J4_2" style="display: inline-block"
-							 data-bind="ntsDatePicker: {
+					<div id="J4_2" style="display: inline-block"
+						 data-bind="ntsDatePicker: {
 							name: '#[QMM016_16]',
 							value: startMonth,
 							dateFormat: 'yearmonth',
 							valueFormat: 'YYYYMM',
 							required: true,
 							enable: modifyMethod() == 1}"
-							 tabindex="2" />
-					</div>
+						 tabindex="2" />
 					<div style= "width: 100px; display: inline-block; margin-left: 5px;" data-bind="text: displayEndMonth"></div>
 				</div>
 			</div>
 
 		</div>
 		<div id="functions-area-bottom">
-			<div tabindex="5">
-				<button class="x-large proceed "
-						data-bind="click: editHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM016_81')}</button>
-
-			</div>
-				<div tabindex="6">
-					<button  class="large" data-bind="click: cancel">#{i18n.getText('QMM016_55')}</button>
-				</div>
+			<button tabindex="3" class="x-large proceed "
+					data-bind="click: editHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM016_81')}</button>
+			<button tabindex="4" class="large" data-bind="click: cancel">#{i18n.getText('QMM016_55')}</button>
 		</div>
 	</ui:define>
 </ui:composition>
