--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/004/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/004/b/index.xhtml
@@ -275,7 +275,7 @@
 						<com:ko-if bind="appCommonSetting().appTypeDiscreteSetting().typicalReasonDisplayFlg()!=0">
 						<div class="valign-center control-group">
 							<div id="lblReasonTemp" class="leftWidth"
-								data-bind="ntsFormLabel: {}">#{i18n.getText('KAF004_17')}</div>
+								data-bind="ntsFormLabel: {required: requiredReason}">#{i18n.getText('KAF004_17')}</div>
 							<div id="inpReasonTemp"
 								data-bind="ntsComboBox: {
 							name: '#[KAF004_17]',
@@ -294,7 +294,7 @@
 						</com:ko-if>
 						<com:ko-if bind="appCommonSetting().appTypeDiscreteSetting().displayReasonFlg()!=0">
 						<div class="valign-center control-group">
-							<div style="vertical-align: top;" class="leftWidth" data-bind="ntsFormLabel: {}">#{i18n.getText('KAF004_18')}</div>
+							<div style="vertical-align: top;" class="leftWidth" data-bind="ntsFormLabel: {required: requiredReason}">#{i18n.getText('KAF004_18')}</div>
 							<div id="multiline">
 								<textarea id="appReason" style="height: 85px;"
 									data-bind="ntsMultilineEditor: {
