--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/004/e/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/004/e/index.xhtml
@@ -80,7 +80,7 @@
 			</div>
 			<com:ko-if bind="appCommonSetting().appTypeDiscreteSetting().typicalReasonDisplayFlg()!=0">
 			<div class="valign-center control-group">
-				<div  class="text_form_label"  data-bind="ntsFormLabel: {}">#{i18n.getText('KAF004_17')}</div>
+				<div  class="text_form_label"  data-bind="ntsFormLabel: {required: requiredReason}">#{i18n.getText('KAF004_17')}</div>
 				<div id="combo-box"
 					data-bind="ntsComboBox: {
 								name: '#[KAF004_17]',
@@ -99,7 +99,7 @@
 			</com:ko-if>
 			<com:ko-if bind="showReasonText() ">
 			<div class="valign-center control-group">
-				<div  class="text_form_label" data-bind="ntsFormLabel: {}">#{i18n.getText('KAF004_18')}</div>
+				<div  class="text_form_label" data-bind="ntsFormLabel: {required: requiredReason}">#{i18n.getText('KAF004_18')}</div>
 				
 					<textarea id="appReason" style="height: 85px;"
 						data-bind="ntsMultilineEditor: {
