--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
@@ -324,3 +324,19 @@ div.fixed-table-container table[id^="fixed-table"] tbody tr:last-child td {
 #tab-1 > div > div:nth-child(5) > div.nts-fixed-body-container.ui-iggrid{
 	overflow: hidden !important;
 }
+
+div#b30 > label:NTH-CHILD(3) {
+	width: 210px;	
+}
+
+div#b30 > label:NTH-CHILD(3) > span:NTH-CHILD(3) {
+	width: 82%;	
+}
+
+div#g36 > label:NTH-CHILD(3) {
+	width: 210px;	
+}
+
+div#g36 > label:NTH-CHILD(3) > span:NTH-CHILD(3) {
+	width: 82%;	
+}
