--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/h/index.xhtml
@@ -47,7 +47,7 @@
 							value: startMonth, 
 							dateFormat: 'yearmonth', 
 							valueFormat: 'YYYYMM', 
-							required: true, 
+							required: modifyMethod() == 1,
 							enable: modifyMethod() == 1}"
 							tabindex="2" />
 						<div style= "width: 80px; display: inline-block" data-bind="text: displayEndMonth"></div>
