--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -568,7 +568,7 @@
 		<div class="valign-center control-group overlay-reason"
 			data-bind="if: typicalReasonDisplayFlg">
 			<!--A9_1 定型理由ラベル--> 			
-			<div class="lblTitle cm-column" data-bind="ntsFormLabel:{}">#{i18n.getText('KAF005_86')}</div>
+			<div class="lblTitle cm-column" data-bind="ntsFormLabel:{required: requiredReason}">#{i18n.getText('KAF005_86')}</div>
 			<!--A9_2 定型理由選択--> 			
 			<div tabindex="23" class="combo-box"
 				data-bind="ntsComboBox: {name: '#[KAF005_87]', 
@@ -585,7 +585,7 @@
 			data-bind="if: isShowReason()">
 			<!--A9_3 申請理由ラベル--> 			
 			<div class="lblTitle cm-column"
-				data-bind="ntsFormLabel: {}">#{i18n.getText('KAF005_88')}</div>
+				data-bind="ntsFormLabel: {required: requiredReason}">#{i18n.getText('KAF005_88')}</div>
 			<!--A9_4 申請理由入力--> 
 			<div id="multiline">
 				<textarea tabindex="24" id ="appReason" class= "textarea-kaf010"
