--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -547,14 +547,13 @@
 								value: multilContent,
 								option: {
 									resizeable: false,
-			                    	width: '500',
-			                    	required: requiredReason()
+			                    	width: '500'
 			                   	},
 			                   	enable:displayAppReasonContentFlg() &amp;&amp; $vm.editable()
 							}" />
 			</div>
 		</div>
-		<!--定型理由 -->
+		<!-- 乖離定型理由 -->
 		<div class="valign-center control-group overlay-reason"
 			data-bind="if: displayDivergenceReasonForm">
 			<!--A9_5 乖離定型理由ラベル--> 
@@ -571,7 +570,7 @@
 								columns: [{ prop: 'reasonName', length: 10 }]}">
 			</div>
 		</div>
-		<!-- 申請理由（ラベル) -->
+		<!--  乖離理由（ラベル) -->
 		<div class="cf valign-top control-group"
 			data-bind="if: displayDivergenceReasonInput">
 			<!--A9_7 乖離理由ラベル--> 
