--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
@@ -51,7 +51,7 @@
 
             <div>
                 <div style="width: 300px;margin-bottom: 0px;" data-bind="ntsSearchBox: {targetKey: 'departmentID', mode:'igTree', comId:'treegrid', enable: false,  items: items, selected: currentSelectedDep, selectedKey: 'departmentID', childField: 'childs', fields: ['departmentName', 'departmentID']}"></div>
-                <p class="" style="margin-right: 25px;margin-bottom: 10px; margin-left: 465px;min-width: 750px">#{i18n.getText('QMM020_31')}</p>
+                <p class="" style="margin-bottom: 10px; text-align: right; width: 800px">#{i18n.getText('QMM020_31')}</p>
 
                 <table id="treegrid" data-bind="ntsTreeGridView:{
                     width: 800,
