--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/011/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/011/c/index.xhtml
@@ -14,7 +14,7 @@
                     data-bind="enable: false">#{i18n.getText('QMM011_3')}</button>
 
         </div>
-        <div class = "fixed-flex-layout">
+        <div class = "contents-area fixed-flex-layout">
             <div class = "left">
                 <div id="C1_1"
                      data-bind="ntsPanel:{width: '220px', height: '415px',direction: 'right', visible: true}">
