--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/011/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/011/b/index.xhtml
@@ -8,7 +8,7 @@
                     <button id="A1_3" tabindex="2"
                             data-bind="enable: false">#{i18n.getText('QMM011_3')}</button>
 				</div>
-	<div class = "fixed-flex-layout" >
+	<div class = "contents-area fixed-flex-layout" >
 		<div class = "left" >
 			<div id="B1_1" 
 				data-bind="ntsPanel:{width: '220px', height: '420px', direction: 'right', visible: true}">
