qmm006: fix bug require

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/a/index.xhtml
@@ -220,7 +220,7 @@
 							name: '#[QMM006_35]',
 							value: entrustorInforUse5,
 							constraint: 'EntrustorUse',
-							required: entrustorInforUse5}" />
+							required: entrustorInforUse5Required}" />
 					</div>
 				</div>
 			</div>
