--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/053/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/053/b/index.xhtml
@@ -58,17 +58,23 @@
 							<div id="B1_6" class="column-1"
 								data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CMM053_15')}</div>
 							<!--B1_7 所属長のコード-->
-							<span id="B1_7" class="label" data-bind="text: departmentCode"></span>
+							<span id="B1_7" class="label" data-bind="text: codeB17"></span>
 							<!--B1_8 所属長の名前-->
-							<span id="B1_8" class="label display-name" data-bind="text: departmentName"></span>
+							<span id="B1_8" class="label display-name" data-bind="text: nameB18"></span>
 						</div>
 						<div class="div-line">
 							<!--B1_9 日別の承認する人-->
 							<div id="B1_9" class="column-1" data-bind="ntsFormLabel: {}">#{i18n.getText('CMM053_16')}</div>
 							<!--B1_10 日別の承認する人のコード-->
-							<span id="B1_10" class="label" data-bind="text: dailyApprovalCode"></span>
+							<span id="B1_10" class="label" data-bind="text: codeB110"></span>
 							<!--B1_11 日別の承認する人の名前-->
-							<span id="B1_11" class="label display-name" data-bind="text: dailyApprovalName"></span>
+							<span id="B1_11" class="label display-name" data-bind="text: nameB111"></span>
+						</div>
+						<div class="div-line">
+							<!--B1_12 日別の承認する人のコード-->
+							<span id="B1_12" style = "margin-left:146px" class="label" data-bind="text: codeB112"></span>
+							<!--B1_13 日別の承認する人の名前-->
+							<span id="B1_13" class="label display-name" data-bind="text: nameB113"></span>
 						</div>
 					</div>
 				</div>
