--- a/nts.uk/uk.mobile/ClientApp/views/login/style.scss
+++ b/nts.uk/uk.mobile/ClientApp/views/login/style.scss
@@ -1,5 +1,14 @@
-div#home {
-    .btn {
-        color: #f00;
+div#login {
+    fieldset.login-form {
+        padding: 1rem;
+        margin: 7rem 1rem 0 1rem;
+        border: 1px solid #ccc;
+        border-radius: 15px;
+        legend {
+            width: auto;
+        }
+        .btn {
+            min-width: 120px;
+        }
     }
 }
