--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
@@ -135,7 +135,7 @@
                             <!--A7_1 次元設定-->
                             <div id="A7_1" class="column-1" style="vertical-align: top"
                                  data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_17')}</div>
-                            <div style="width: 200px; display: inline-block; vertical-align: top">
+                            <div style="width: 200px; display: inline-block; vertical-align: top; padding-top: 10px;">
                                 <!--A7_2 汎用テーブル-->
                                 <div id="A7_2">#{i18n.getText('QMM016_18')}</div>
                                 <!--A7_3 罫線-->
