add css for checkbox component

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -10,5 +10,6 @@
 @import './lumen/input.scss';
 @import './lumen/button.scss';
 @import './lumen/navbar.scss';
+@import './lumen/checkbox.scss';
 @import './lumen/code.scss';
 @import './lumen/markdown.scss';
