--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
@@ -35,7 +35,7 @@
         </div>
         <div id="functions-area-bottom">
             <button tabindex="2" class="x-large proceed "
-                    data-bind="click: decideSelect, enable: selectedStatementItemName().length > 0">#{i18n.getText('QMM016_54')}</button>
+                    data-bind="click: decideSelect">#{i18n.getText('QMM016_54')}</button>
             <button tabindex="3" class="large" data-bind="click: cancelSelect">#{i18n.getText('QMM016_55')}</button>
         </div>
     </ui:define>
